Create AppImage during build